# trainable

./: .env.example  .gitignore  AGENTS.md  AUDIT_FIXES_APPLIED.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  LICENSE  PR_REVIEW.md  README.md  RELEASE_NOTES.md  docker-compose.prod.yml  docker-compose.yml  ml-intern-comparison.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-image.yml  publish.yml
backend/: AGENTS.md  Dockerfile  config.py  db.py  llm-models.yml  main.py  models.py  observability.py  pricing.yaml  requirements.txt  schemas.py
backend/agents/: AGENTS.md  __init__.py  chat.yaml  data_prep.yaml  data_search.yaml  deploy.yaml  eda.yaml  feature_eng.yaml  orchestrator.yaml  research.yaml  researcher.yaml  reviewer.yaml  trainer.yaml
backend/routers/: AGENTS.md  compare.py  data_explorer.py  download.py  experiments.py  files.py  lineage.py  models.py  notebook.py  projects.py  registry.py  s3_browser.py  sessions.py  skills.py  snapshots.py  stream.py  usage.py
backend/scripts/: test_dynamic_tools_demo.py
backend/services/: canvas.py  clarifications.py  dataset_versions.py  deploy.py  experiments.py  kernel_manager.py  lineage.py  mcp_tools.py  metadata_extractor.py  metrics.py  notebook_store.py  registry.py  s3_sync.py  sandbox.py  sandbox.yml  skills.py  snapshot.py  trainable_runtime.py  trainable_sdk.py  usage.py  (+4 more)
cli/: AGENTS.md  README.md  pyproject.toml
cli/trainable_cli/: main.py
cli/trainable_cli/_templates/: docker-compose.prod.yml
docs/: ARCHITECTURE.md  BUGS.md  pre-release-v0.0.3-bugs.md
frontend/: AGENTS.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+250 files in other folders)
